add tests for EnrolleeController & DependentController new files:  EnrolleeControllerTest & DependentControllerTest